--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Benjamin Spector</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -13,15 +15,15 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Benjamin Spector!</h1>
+			<div class="blurb">
+				<h1>Hi there, I'm Benjamin Spector!</h1>
 				<p>I'm a high school student interested in all things STEM.</a></p>
-    		</div><!-- /.blurb -->
+			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:benjaminfspector@gmail.com">email</a></li>
-        		<li><a href="https://github.com/sydriax">github.com/sydriax</a></li>
+			<ul>
+				<li><a href="mailto:benjaminfspector@gmail.com">email</a></li>
+				<li><a href="https://github.com/sydriax">github.com/sydriax</a></li>
 			</ul>
 		</footer>
 	</body>
